--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
+    "uuid": "^8.3.1",
     "yup": "^0.31.0"
   },
   "scripts": {
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/parser": "^3.2.0",
     "eslint": "^6.6.0",
