--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.7.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/parser": "^3.2.0",
+    "axios-mock-adapter": "^1.19.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -75,6 +77,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-test-renderer": "^17.0.1"
   }
 }
